--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
 	],
 	"minimum-stability": "dev",
 	"require" : {
+		"fabpot/goutte" : "dev-master",
 		"symfony/http-foundation" : "dev-master",
 		"symfony/http-kernel" : "dev-master",
 		"symfony/event-dispatcher" : "dev-master"
