--- a/composer.json
+++ b/composer.json
@@ -12,16 +12,15 @@
 			"email" : "hoducha@gmail.com"
 		}
 	],
-	"minimum-stability": "dev",
 	"require" : {
-		"fabpot/goutte" : "dev-master",
-		"symfony/http-foundation" : "dev-master",
-		"symfony/http-kernel" : "dev-master",
-		"symfony/event-dispatcher" : "dev-master"
+		"fabpot/goutte" : ">=3.1.0",
+		"symfony/http-foundation" : ">=2.7.1",
+		"symfony/http-kernel" : ">=2.7.1",
+		"symfony/event-dispatcher" : ">=2.7.1"
 	},
 	"require-dev" : {
 		"phpunit/phpunit" : "4.7.5",
-		"symfony/debug" : "dev-master"
+		"symfony/debug" : ">=2.7.1"
 	},
 	"autoload" : {
 		"psr-4" : {
