--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     "repositories": [
       {
         "type": "vcs",
-        "url": "https://github.com/hoducha/Goutte"
+        "url": "https://github.com/hoducha/Goutte.git"
       }
     ],
 	"require" : {
